--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "dns2": "^2.1.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "node-forge": "^1.3.1",
     "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/dns2": "^2.0.9",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.13",
+    "@types/node-forge": "^1.3.13",
     "@types/pg": "^8.15.4"
   }
 }
